# rust-nix-template

./: Cargo.toml
.github/workflows/: update_inputs.yml
