[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2018"
# If you change the name here, you must also do it in flake.nix
name = "rust-nix-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

[dependencies.serenity]
default-features = false
features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "unstable_discord_api",
]
version = "0.10"

[patch.crates-io]
serenity = {git = 'https://github.com/serenity-rs/serenity', branch = 'current'}
